--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,3 @@
-{% extends "layout.html" %} {% block body %} {% endblock %}
+{% extends "layout.html" %} {% block body %}
+<p>Welcome {{name}}</p>
+{% endblock %}
