--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
   <hr />
   <p style="text-align: center">
     Don't have an account?
-    <a class="la" href="signin.html">Create account</a>
+    <a class="la" href="/signin">Create account</a>
   </p>
 </div>
 {% endblock %}
