--- a/templates/signin.html
+++ b/templates/signin.html
@@ -12,6 +12,10 @@
         border-right: none;
         outline-style: none;
       }
+      .accept {
+        background-color: rgb(95 213 95 / 83%);
+        color: rgb(0 0 0 / 73%);
+      }
       .pass2 {
         border-bottom: rgba(255, 0, 0, 0.829) thin solid;
       }
@@ -31,85 +35,202 @@
         font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
         font-size: large;
         margin: 2rem;
-        width: 33.3%;
+        width: 60%;
       }
-      #send {
+      .send {
         border-radius: 25px;
         background-color: #c9c6c6;
-        transition: all 2s ease;
+        transition: all 1s ease;
         border-bottom: none;
         margin-top: 5px;
       }
-      #send:hover {
+      .send:hover {
         background-color: darkgray;
         transform: translateY(-5px);
       }
       p {
         font-family: "Times New Roman", Times, serif;
         font-size: large;
+        text-align: center;
       }
       .hidden {
         display: none;
+      }
+      form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      #error {
+        background-color: rgb(241 56 56 / 90%);
+        margin: 4px;
+        padding: 5px;
+        text-align: center;
+        border-radius: 45px;
+        letter-spacing: 2px;
+        color: black;
+        font-weight: bold;
+      }
+      body {
+        display: grid;
+        grid-template-rows: auto, auto;
+        grid-template-columns: auto 45% 45% auto;
+        row-gap: 2rem;
+      }
+      #first {
+        grid-row: 1;
+        grid-column: 3;
       }
     </style>
     <title>Create Account</title>
   </head>
   <body>
-    <form action="/signin" method="post" name="first">
-      <p>Enter details that appear on your bill</p>
-      <input type="text" t name="fname" placeholder="First name" />
-      <input type="text" name="lname" placeholder="Second name" />
-      <input type="tel" name="phone" placeholder="Phone number" />
-      <input type="text" name="account" placeholder="Account no" />
+    <div
+      style="
+        grid-row: 1;
+        grid-column: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      "
+    >
+      <p>Welcome new user 😃</p>
+      <p>Let us create an account for easier access to our water bills</p>
+      <p>
+        First we shall enter the account details provided to you by the company
+      </p>
+      <p>Firstname: John</p>
+      <p>Lastname: Doe</p>
+      <p>Phone number: 07xxxxxxxx</p>
+      <p>Account Number: L0-00JD</p>
+    </div>
+    <form action="/signin" method="get" id="first">
+      <input type="text" t name="fname" placeholder="First name" required />
+      <input type="text" name="lname" placeholder="Second name" required />
+      <input type="tel" name="phone" placeholder="Phone number" required />
+      <input type="text" name="account" placeholder="Account no" required />
+      <input class="send" id="send1" type="submit" value="Verify details" />
+    </form>
+    <div style="grid-row: 2; grid-column: 3">
       <p>Enter details that you will use to login to your account</p>
-      <div>
-        <p id="error" class="hidden"></p>
-        <input id="user" type="text" name="username" placeholder="Username" />
-        <input
-          id="pass1"
-          type="password"
-          name="password"
-          placeholder="Password"
-          important
-          required
-        />
-        <input
-          id="pass2"
-          type="password"
-          name="cpassword"
-          placeholder="Confirm password"
-          required
-        />
-        <input id="em" type="email" name="email" placeholder="Email Optional" />
-        <input id="send" type="submit" value="Create account" />
-      </div>
+    </div>
+    <form action="/signin" method="post" style="grid-row: 2; grid-column: 2">
+      <p id="error" class="hidden"></p>
+      <input id="user" type="text" name="username" placeholder="Username" />
+      <input
+        id="pass1"
+        type="password"
+        name="password"
+        placeholder="Password"
+        important
+        required
+      />
+      <input
+        id="pass2"
+        type="password"
+        name="cpassword"
+        placeholder="Confirm password"
+        required
+      />
+      <input id="em" type="email" name="email" placeholder="Email Optional" />
+      <input class="send" id="send2" type="submit" value="Create account" />
     </form>
     <script>
+      ////////////////////////////////////////////////////////
+      //get elements from document
       const pass1 = document.getElementById("pass1");
       const pass2 = document.getElementById("pass2");
       const user = document.getElementById("user");
       const email = document.getElementById("em");
+      const form1 = document.getElementById("first");
       const error = document.getElementById("error");
+      const submitbtn2 = document.getElementById("send2");
+      const submitbtn1 = document.getElementById("send1");
+      /////////////////////////////////////////////////////
+      //define functions to be used
+      //check value for inputs if have unnecessary symbols prevent SQL injection
+      const clean = (element) => {
+        var cnstrc = element.value.match(/[^0-9a-z ]/gi);
+        console.log(cnstrc);
+      };
+      //disable html elements from editing
+      const disable = (element) => {
+        element.setAttribute("disabled", true);
+      };
+      //enable html elements for editing
+      const enable = (element) => {
+        element.removeAttribute("disabled");
+      };
+      /////////////////////////////////////////////////////
+      //defining event listeners for web interaction
+      submitbtn1.addEventListener("click", function (e) {
+        e.preventDefault();
+        //get data from form once submitted
+        const formdata = new FormData(form1);
+        const values = [...formdata.entries()];
+        submit();
+      });
+      //TODO try AJAX xmlhttprequest
+      //TODO fetch api for config of verification of details
+      const submit = async () => {
+        try {
+          let response = await fetch("/trial", {
+            method: "POST",
+            headers: { "content-Type": "application/json" },
+            body: JSON.stringify({ ...[...new FormData(form1).values()] }),
+          }).then(function (response) {
+            if (response.status !== 200) {
+              console.log("ALARRRMM!!!");
+              return;
+            }
+            response.json().then(function (data) {
+              //TODO check message that is received
+              console.log(data["message"]);
+              if (data["message"] == "user exists") {
+                disable(submitbtn1);
+                submitbtn1.classList.remove("send");
+                submitbtn1.classList.add("accept");
+                for (let i = 0; i < 4; i++) {
+                  clean(form1.children.item(i));
+                  disable(form1.children.item(i));
+                }
+              }
+              if (data["message"] != "user exists") {
+              }
+            });
+          });
+          //const result = await response.json();
+          //console.log(result);
+        } catch (error) {
+          console.log("there is an error!!!!", error);
+        }
+      };
       email.addEventListener("keyup", function () {
         if (email.value != "") {
           if (email.value.match(/[^@]+@[^@]+\.[^@]+/) == null) {
             email.classList.add("pass2");
-            console.log("invalid email address");
             error.innerHTML = "invalid email address";
             error.classList.remove("hidden");
+            disable(submitbtn2);
+          } else {
+            email.classList.remove("pass2");
+            error.classList.add("hidden");
+            enable(submitbtn2);
           }
-        } else if (email.value == "") {
+        } else {
           email.classList.remove("pass2");
           error.classList.add("hidden");
+          enable(submitbtn2);
         }
       });
       user.addEventListener("keyup", function () {
         if (user.value.match(/[^0-9a-z ]/gi) != null) {
-          console.log("username should not contain symbols");
           error.innerHTML = "username should not contain symbols";
           error.classList.remove("hidden");
+          disable(submitbtn2);
         } else {
           error.classList.add("hidden");
+          enable(submitbtn2);
         }
       });
       pass1.addEventListener("keyup", function () {
@@ -128,9 +249,11 @@
           pass2.classList.add("pass2");
           error.innerHTML = "passwords do not match";
           error.classList.remove("hidden");
+          disable(submitbtn2);
         } else {
           error.classList.add("hidden");
           pass2.classList.remove("pass2");
+          enable(submitbtn2);
         }
       });
     </script>
