--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
+    <script defer src="/static/script.js"></script>
     <title>Document</title>
   </head>
   <body>
