--- a/templates/signin.html
+++ b/templates/signin.html
@@ -15,6 +15,8 @@
       .accept {
         background-color: rgb(95 213 95 / 83%);
         color: rgb(0 0 0 / 73%);
+        border-radius: 25px;
+        border-bottom: none;
       }
       .pass2 {
         border-bottom: rgba(255, 0, 0, 0.829) thin solid;
@@ -61,7 +63,7 @@
         flex-direction: column;
         align-items: center;
       }
-      #error {
+      .error {
         background-color: rgb(241 56 56 / 90%);
         margin: 4px;
         padding: 5px;
@@ -95,9 +97,9 @@
       "
     >
       <p>Welcome new user 😃</p>
-      <p>Let us create an account for easier access to our water bills</p>
       <p>
-        First we shall enter the account details provided to you by the company
+        To create an account you need the account number provided to you by the
+        company
       </p>
       <p>Firstname: John</p>
       <p>Lastname: Doe</p>
@@ -105,6 +107,7 @@
       <p>Account Number: L0-00JD</p>
     </div>
     <form action="/signin" method="get" id="first">
+      <p class="error hidden" id="error1"></p>
       <input type="text" t name="fname" placeholder="First name" required />
       <input type="text" name="lname" placeholder="Second name" required />
       <input type="tel" name="phone" placeholder="Phone number" required />
@@ -114,9 +117,20 @@
     <div style="grid-row: 2; grid-column: 3">
       <p>Enter details that you will use to login to your account</p>
     </div>
-    <form action="/signin" method="post" style="grid-row: 2; grid-column: 2">
-      <p id="error" class="hidden"></p>
-      <input id="user" type="text" name="username" placeholder="Username" />
+    <form
+      id="second"
+      action="/signin"
+      method="post"
+      style="grid-row: 2; grid-column: 2"
+    >
+      <p class="error hidden" id="error2"></p>
+      <input
+        id="user"
+        type="text"
+        name="username"
+        placeholder="Username"
+        disabled
+      />
       <input
         id="pass1"
         type="password"
@@ -124,6 +138,7 @@
         placeholder="Password"
         important
         required
+        disabled
       />
       <input
         id="pass2"
@@ -131,9 +146,22 @@
         name="cpassword"
         placeholder="Confirm password"
         required
+        disabled
       />
-      <input id="em" type="email" name="email" placeholder="Email Optional" />
-      <input class="send" id="send2" type="submit" value="Create account" />
+      <input
+        disabled
+        id="em"
+        type="email"
+        name="email"
+        placeholder="Email Optional"
+      />
+      <input
+        disabled
+        class="send"
+        id="send2"
+        type="submit"
+        value="Create account"
+      />
     </form>
     <script>
       ////////////////////////////////////////////////////////
@@ -143,7 +171,9 @@
       const user = document.getElementById("user");
       const email = document.getElementById("em");
       const form1 = document.getElementById("first");
-      const error = document.getElementById("error");
+      const form2 = document.getElementById("second");
+      const error = document.getElementById("error2");
+      const error2 = document.getElementById("error1");
       const submitbtn2 = document.getElementById("send2");
       const submitbtn1 = document.getElementById("send1");
       /////////////////////////////////////////////////////
@@ -172,6 +202,22 @@
       });
       //TODO try AJAX xmlhttprequest
       //TODO fetch api for config of verification of details
+      submitbtn2.addEventListener("click", function (e) {
+        e.preventDefault();
+        try {
+          let response = fetch("/signin", {
+            method: "POST",
+            headers: { "content-Type": "application/json" },
+            body: JSON.stringify({ ...[...new FormData(form2).values()] }),
+          }).then(function (response) {
+            if (response.redirected) {
+              window.location.href = response.url;
+            }
+          });
+        } catch (error) {
+          console.log(error);
+        }
+      });
       const submit = async () => {
         try {
           let response = await fetch("/trial", {
@@ -186,17 +232,20 @@
             response.json().then(function (data) {
               //TODO check message that is received
               console.log(data["message"]);
-              if (data["message"] == "user exists") {
-                disable(submitbtn1);
+              if (data["message"] == "success") {
                 submitbtn1.classList.remove("send");
                 submitbtn1.classList.add("accept");
-                for (let i = 0; i < 4; i++) {
-                  clean(form1.children.item(i));
+                error2.classList.add("hidden");
+                for (let i = 1; i < 6; i++) {
+                  enable(form2.children.item(i));
+                  //clean(form1.children.item(i));
                   disable(form1.children.item(i));
                 }
+              } else if (data["message"] == "error") {
+                error2.innerHTML =
+                  "incorrect details or You already have an account";
               }
-              if (data["message"] != "user exists") {
-              }
+              error2.classList.remove("hidden");
             });
           });
           //const result = await response.json();
