--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,16 @@
   <!-- add this that should be on the contacts and info -->
   <div id="contacts">
     <ul>
-      <li><a href="" class="cnts">Twitter</a></li>
-      <li><a href="" class="cnts">Facebook</a></li>
-      <li><a href="" class="cnts">Whatsapp</a></li>
+      <li>
+        <i class="fa-brands fa-twitter"></i>
+        <a href="" class="cnts"></i>Twitter</a>
+      </li>
+      <li>
+        <i class="fa-brands fa-facebook"></i>
+        <a href="" class="cnts">Facebook</a>
+      </li>
+      <li><i class="fa-brands fa-whatsapp"></i>
+        <a href="" class="cnts">Whatsapp</a></li>
     </ul>
     &copy 2021
   </div>
