--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
+    <script
+      src="https://kit.fontawesome.com/04885ca4bc.js"
+      crossorigin="anonymous"
+    ></script>
     <script defer src="/static/script.js"></script>
     <title>Document</title>
   </head>
