--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,101 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      input:focus-visible {
-        border-bottom: rgba(0, 0, 255, 0.829) thin solid;
-        border-top: none;
-        border-left: none;
-        border-right: none;
-        outline-style: none;
-      }
-      .accept {
-        background-color: rgb(95 213 95 / 83%);
-        color: rgb(0 0 0 / 73%);
-        border-radius: 25px;
-        border-bottom: none;
-      }
-      .pass2 {
-        border-bottom: rgba(255, 0, 0, 0.829) thin solid;
-      }
-      .pass2:focus-visible {
-        border-bottom: rgba(255, 0, 0, 0.829) thin solid;
-      }
-
-      input {
-        border-top: none;
-        border-left: none;
-        border-right: none;
-        border-bottom-width: thin;
-        text-align: center;
-        display: block;
-        line-height: 2rem;
-        letter-spacing: 1.5px;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-        font-size: large;
-        margin: 2rem;
-        width: 33.3%;
-      }
-      #send {
-        border-radius: 25px;
-        background-color: #c9c6c6;
-        transition: all 2s ease;
-        border-bottom: none;
-        margin-top: 5px;
-      }
-      #send:hover {
-        width: 60%;
-      }
-      .send {
-        border-radius: 25px;
-        background-color: #c9c6c6;
-        transition: all 1s ease;
-        border-bottom: none;
-        margin-top: 5px;
-      }
-      .send:hover {
-        background-color: darkgray;
-        transform: translateY(-5px);
-      }
-      p {
-        font-family: "Times New Roman", Times, serif;
-        font-size: large;
-        text-align: center;
-      }
-      .hidden {
-        display: none;
-      }
-
-      form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      .error {
-        background-color: rgb(241 56 56 / 90%);
-        margin: 4px;
-        padding: 5px;
-        text-align: center;
-        border-radius: 45px;
-        letter-spacing: 2px;
-        color: black;
-        font-weight: bold;
-      }
-      body {
-        display: grid;
-        grid-template-rows: auto, auto;
-        grid-template-columns: auto 45% 45% auto;
-        row-gap: 2rem;
-      }
-      #first {
-        grid-row: 1;
-        grid-column: 3;
-      }
-    </style>
+    <link rel="stylesheet" href="/static/signcs.css" />
+    <script
+      src="https://kit.fontawesome.com/04885ca4bc.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Create Account</title>
   </head>
   <body>
-    <!-- <script> -->
     <div
       style="
         grid-row: 1;
@@ -110,8 +23,8 @@
     >
       <p>Welcome new user 😃</p>
       <p>
-        To create an account you need the account number provided to you by the
-        company
+        To create an account you need the details used in your monthly bill. See
+        example below
       </p>
       <p>Firstname: John</p>
       <p>Lastname: Doe</p>
@@ -119,61 +32,78 @@
       <p>Account Number: L0-00JD</p>
     </div>
     <form action="/signin" method="get" id="first">
+      <p>Fill out the form below</p>
       <p class="error hidden" id="error1"></p>
       <input type="text" t name="fname" placeholder="First name" required />
       <input type="text" name="lname" placeholder="Second name" required />
       <input type="tel" name="phone" placeholder="Phone number" required />
       <input type="text" name="account" placeholder="Account no" required />
-      <input class="send" id="send1" type="submit" value="Verify details" />
+      <div>
+        <input class="send" id="send1" type="submit" value="Verify details" />
+      </div>
     </form>
-    <div style="grid-row: 2; grid-column: 3">
-      <p>Enter details that you will use to login to your account</p>
-    </div>
+    <div style="grid-row: 2; grid-column: 3"></div>
     <form
       id="second"
       action="/signin"
       method="post"
       style="grid-row: 2; grid-column: 2"
     >
+      <p>Enter details that you will use to login to your account</p>
       <p class="error hidden" id="error2"></p>
-      <input
-        id="user"
-        type="text"
-        name="username"
-        placeholder="Username"
-        disabled
-      />
-      <input
-        id="pass1"
-        type="password"
-        name="password"
-        placeholder="Password"
-        important
-        required
-        disabled
-      />
-      <input
-        id="pass2"
-        type="password"
-        name="cpassword"
-        placeholder="Confirm password"
-        required
-        disabled
-      />
-      <input
-        disabled
-        id="em"
-        type="email"
-        name="email"
-        placeholder="Email Optional"
-      />
-      <input
-        disabled
-        class="send"
-        id="send2"
-        type="submit"
-        value="Create account"
-      />
+      <div>
+        <input
+          id="user"
+          type="text"
+          name="username"
+          placeholder="Username"
+          disabled
+        />
+        <i class="fa-solid fa-circle-check green"></i>
+      </div>
+      <div>
+        <input
+          id="pass1"
+          type="password"
+          name="password"
+          placeholder="Password"
+          important
+          required
+          disabled
+        />
+        <i class="fa-solid fa-circle-check green"></i>
+      </div>
+      <div>
+        <input
+          id="pass2"
+          type="password"
+          name="cpassword"
+          placeholder="Confirm password"
+          required
+          disabled
+        />
+        <i class="fa-solid fa-circle-check green"></i>
+      </div>
+      <div>
+        <input
+          disabled
+          id="em"
+          type="email"
+          name="email"
+          placeholder="Email Optional"
+        />
+        <i class="fa-solid fa-circle-check green"></i>
+      </div>
+      <div>
+        <input
+          disabled
+          class="send"
+          id="send2"
+          type="submit"
+          value="Create account"
+        />
+        <i class="fa-solid fa-circle-check green"></i>
+      </div>
     </form>
     <script>
       ////////////////////////////////////////////////////////
@@ -210,7 +140,13 @@
         //get data from form once submitted
         const formdata = new FormData(form1);
         const values = [...formdata.entries()];
+        submitbtn1.insertAdjacentHTML(
+          "afterend",
+          `<i class="fa-solid fa-spinner fa-pulse fa-lg"></i>`
+        );
+        console.log("First");
         submit();
+        //submitbtn1.nextElementSibling.remove();
       });
       //TODO try AJAX xmlhttprequest
       //TODO fetch api for config of verification of details
@@ -243,21 +179,24 @@
             }
             response.json().then(function (data) {
               //TODO check message that is received
-              console.log(data["message"]);
               if (data["message"] == "success") {
                 submitbtn1.classList.remove("send");
                 submitbtn1.classList.add("accept");
                 error2.classList.add("hidden");
-                for (let i = 1; i < 6; i++) {
-                  enable(form2.children.item(i));
+                disable(submitbtn1);
+                for (let i = 2; i < 7; i++) {
+                  enable(form2.children.item(i).children.item(0));
+                  console.log(i);
                   //clean(form1.children.item(i));
                   disable(form1.children.item(i));
                 }
+                submitbtn1.nextSibling.remove();
               } else if (data["message"] == "error") {
                 error2.innerHTML =
                   "incorrect details or You already have an account";
+                error2.classList.remove("hidden");
+                submitbtn1.nextSibling.remove();
               }
-              error2.classList.remove("hidden");
             });
           });
           //const result = await response.json();
@@ -291,11 +230,10 @@
           console.log("username should not contain symbols");
           error.innerHTML = "username should not contain symbols";
           error.classList.remove("hidden");
+          disable(submitbtn2);
         } else {
           error.classList.add("hidden");
-          error.innerHTML = "username should not contain symbols";
-          error.classList.remove("hidden");
-          disable(submitbtn2);
+          enable(submitbtn2);
         }
       });
       pass1.addEventListener("keyup", function () {
