--- a/templates/signin.html
+++ b/templates/signin.html
@@ -255,7 +255,7 @@
         } else {
           error.classList.add("hidden");
           pass2.classList.remove("pass2");
-          disable(submitbtn2);
+          enable(submitbtn2);
         }
       });
     </script>
