--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
       <li><i class="fa-brands fa-whatsapp"></i>
         <a href="" class="cnts">Whatsapp</a></li>
     </ul>
-    &copy 2021
+   <div class="center"> &copy 2021</div>
   </div>
 </div>
 <div class="display hidden" id="searchresults">
