--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
   <legend>Premalite Water Supply Management</legend>
   <hr style="margin-bottom: 50px; margin-top: 0px" />
   <!-- change into animation fading out -->
-  <div class="hidden" id="error">Incorrect Password</div>
+  <div class="hidden" id="error">Incorrect Password or username</div>
   <form id="login_form" action="/login" method="post" -->
     <input
       type="text"
