--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <div class="loginPage">
   <legend>Premalite Water Supply Management</legend>
   <hr style="margin-bottom: 50px; margin-top: 0px" />
-  <!-- change into animation fading out -->
+  <!-- TODO change into animation fading out -->
   <div class="hidden" id="error">Incorrect Password or username</div>
   <form id="login_form" action="/login" method="post" -->
     <input
