--- a/static/style.css
+++ b/static/style.css
@@ -85,14 +85,14 @@ ul {
 }
 /* Styles for the menu */
 #menu {
+  height: max-content;
   position: absolute;
   background: darkgrey;
-  height: 45%;
   opacity: 0.95;
-  width: 18rem;
+  /* width: 18rem; */
   padding-left: 1.5rem;
   color: black;
-  margin-right: 2.5rem;
+  padding-right: 2.5rem;
   border-radius: 2% 35%;
 }
 
@@ -100,7 +100,7 @@ ul {
 .App {
   max-width: 80%;
   display: grid;
-  grid-template-rows: auto 2rem repeat(9, 2rem);
+  grid-template-rows: auto 2rem repeat(11, 2rem);
   grid-template-columns: 4fr 3fr;
   column-gap: 2rem;
   margin: auto;
@@ -146,9 +146,7 @@ ul {
   line-height: 2rem;
   height: 2rem;
 }
-#viewmenu {
-  display: none;
-}
+
 #name {
   font-size: x-large;
   letter-spacing: 2px;
@@ -227,7 +225,7 @@ ul {
   box-shadow: 0px 2px 3px 3px rgba(136, 135, 135, 0.8);
 }
 #first {
-  grid-row: 11;
+  grid-row: 13;
   grid-column: 1/2;
   text-align: center;
 }
@@ -313,6 +311,14 @@ ul {
   font-family: cambria;
   letter-spacing: 1.5px;
 }
+#usagegraph {
+  width: 500px;
+  height: 500px;
+}
+#quarterlyusage {
+  width: 500px;
+  height: 500px;
+}
 @media (max-width: 400px) {
   #error {
     width: 80%;
@@ -327,6 +333,8 @@ ul {
     padding-left: 1rem;
     width: auto;
     font-size: larger;
+    letter-spacing: 0.75px;
+    margin-top: 1rem;
     cursor: pointer;
   }
   .allrow {
@@ -338,7 +346,7 @@ ul {
   }
   .bill {
     margin: 15px 0px;
-    height: 16rem;
+    height: 20rem;
   }
   .main {
     margin-top: 0px;
@@ -404,6 +412,9 @@ ul {
 }
 @media (min-width: 401px) {
   #viewmenu {
+    display: none;
+  }
+  #menu {
     display: none;
   }
 }
