added git ignore file      modified admin page      added length attributes to signin inputs      added basic validationin signin form

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,9 +13,9 @@
 <!-- html for admin viewing -->
 {% block body %}
 <!-- show monthly usage of water -->
-<div id="usagegraph"></div>
+<!-- <div id="usagegraph"></div> -->
 <!-- show graphical rep of quaterly usage of data -->
-<div id="quarterlyusage"></div>
+<!-- <div id="quarterlyusage"></div> -->
 <!-- show percentages of how people have paid fully,half,no attempt -->
 <div id="piepayments"></div>
 <!--table showing members with arrears more than 5000  -->
