--- a/templates/admin.html
+++ b/templates/admin.html
@@ -17,6 +17,68 @@
 <!-- show graphical rep of quaterly usage of data -->
 <!-- <div id="quarterlyusage"></div> -->
 <!-- show percentages of how people have paid fully,half,no attempt -->
+<div id="debtanalysis">
+  <div>
+    <p>Current month data analysis</p>
+    <table>
+      <thead>
+        <th colspan="4">Users with more than 10000 debt</th>
+      </thead>
+      <th>Name</th>
+      <th>Account number</th>
+      <th>Phone number</th>
+      <th>Amount</th>
+    </table>
+    <table>
+      <thead>
+        <th colspan="4">Users with more than 5000 debt</th>
+      </thead>
+      <th>Name</th>
+      <th>Account number</th>
+      <th>Phone number</th>
+      <th>Amount</th>
+    </table>
+    <table>
+      <thead>
+        <th colspan="4">Users who made no attempt on payment</th>
+      </thead>
+      <th>Name</th>
+      <th>Account number</th>
+      <th>Phone number</th>
+      <th>Amount</th>
+    </table>
+  </div>
+  <div>
+    <p>Previous month data analysis</p>
+    <table>
+      <thead>
+        <th colspan="4">Users with more than 10000 debt</th>
+      </thead>
+      <th>Name</th>
+      <th>Account number</th>
+      <th>Phone number</th>
+      <th>Amount</th>
+    </table>
+    <table>
+      <thead>
+        <th colspan="4">Users with more than 5000 debt</th>
+      </thead>
+      <th>Name</th>
+      <th>Account number</th>
+      <th>Phone number</th>
+      <th>Amount</th>
+    </table>
+    <table>
+      <thead>
+        <th colspan="4">Users who made no attempt on payment</th>
+      </thead>
+      <th>Name</th>
+      <th>Account number</th>
+      <th>Phone number</th>
+      <th>Amount</th>
+    </table>
+  </div>
+</div>
 <div id="piepayments"></div>
 <!--table showing members with arrears more than 5000  -->
 <div id="arrears"></div>
