added admin home page    added complentary comments

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "test.html" %}
 
 <!-- insert script  -->
 {% block script%}
@@ -9,9 +9,11 @@
 ></script>
 <script defer src="/static/admscript.js"></script>
 {% endblock %}
+<div id=" adminMenu"></div>
 
 <!-- html for admin viewing -->
 {% block body %}
+
 <!-- show monthly usage of water -->
 <!-- <div id="usagegraph"></div> -->
 <!-- show graphical rep of quaterly usage of data -->
