--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,9 +14,43 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="/static/script.js"></script>
+    {%block head %}{% endblock %}
     <title>{%block title %}{% endblock %}</title>
+    <!-- <style>
+      #ball {
+        filter: blur(2px);
+        position: absolute;
+        width: 1rem;
+        height: 1rem;
+        color: red;
+        animation: blur 4s ease infinite;
+      }
+      #menu {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        align-items: center;
+      }
+      @keyframes blur {
+        0% {
+          left: 0px;
+        }
+        50% {
+          left: 100%;
+        }
+        100% {
+          left: 0px;
+        }
+      }
+    </style> -->
   </head>
   <body>
+    <!-- <div id="menu" style="color: BLUE">
+      PREMALITE WATER
+      <div id="ball"></div>
+    </div> -->
     {%block body %} {% endblock %}
   </body>
 </html>
